// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-iac-generator - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Generate deployment-ready Bicep templates from existing Azure environments or Draw.io architecture diagrams. Reverse-engineer live infrastructure into Infrastructure as Code. WHEN: generate bicep, azure to bicep, generate bicep from azure, bicep from diagram, diagram to bicep, create bicep templates from resources, export infrastructure as code, generate infrastructure code, reverse engineer azure, generate iac from azure. DO NOT USE FOR: creating new applications, deploying existing resources, comparing environments.",
  "extractedKeywords": [
    "app service",
    "applications",
    "architecture",
    "authentication",
    "azure",
    "bicep",
    "cli",
    "code",
    "comparing",
    "container",
    "cosmos",
    "create",
    "creating",
    "deploy",
    "deploying",
    "deployment-ready",
    "diagram",
    "diagrams",
    "draw",
    "engineer",
    "environments",
    "existing",
    "export",
    "from",
    "function",
    "generate",
    "generator",
    "iac",
    "identity",
    "infrastructure",
    "into",
    "key vault",
    "keyvault",
    "live",
    "mcp",
    "monitor",
    "networking",
    "redis",
    "resources",
    "reverse",
    "reverse-engineer",
    "sql",
    "storage",
    "templates",
    "when",
  ],
  "name": "azure-iac-generator",
}
`;

exports[`azure-iac-generator - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app service",
  "applications",
  "architecture",
  "authentication",
  "azure",
  "bicep",
  "cli",
  "code",
  "comparing",
  "container",
  "cosmos",
  "create",
  "creating",
  "deploy",
  "deploying",
  "deployment-ready",
  "diagram",
  "diagrams",
  "draw",
  "engineer",
  "environments",
  "existing",
  "export",
  "from",
  "function",
  "generate",
  "generator",
  "iac",
  "identity",
  "infrastructure",
  "into",
  "key vault",
  "keyvault",
  "live",
  "mcp",
  "monitor",
  "networking",
  "redis",
  "resources",
  "reverse",
  "reverse-engineer",
  "sql",
  "storage",
  "templates",
  "when",
]
`;
